--- a/css/style.css
+++ b/css/style.css
@@ -3,48 +3,56 @@ body{
 	padding: 0;
 	}
 	.square
-	{height: 120px;
+	{
+	height: 120px;
 	width: 150px;
 	background-color: green;
 	}
 	.circle
-	{height: 150px;
+	{
+	height: 150px;
 	width: 150px;
 	background-color: yellow;
 	border-radius: 50%;
 	}
 	.rectangle
-	{height: 80px;
+	{
+	height: 80px;
 	width: 160px;
 	background-color: black;
 	}
 	.oval
-	{height: 110px;
+	{
+	height: 110px;
 	width: 150px;
 	background-color: yellow;
 	border-radius: 50%;
 	}
 	.toplefttriangle
-	{height: 0;
+	{
+	height: 0;
 	width: 0;
 	border-top: 140px solid blue;
 	border-right: 140px solid transparent;
 	}
 	.toprighttriangle
-	{height: 0;
+	{
+	height: 0;
 	width: 0;
 	border-top: 140px solid violet;
 	border-left: 140px solid transparent;
 	}
 	.uptriangle
-	{height: 0;
+	{
+	height: 0;
 	width: 0;
 	border-left: 70px solid transparent;
 	border-right: 70px solid transparent;
 	border-bottom: 100px solid black;
 	}
 	.downtriangle
-	{height: 0;
+	{
+	height: 0;
 	width: 0;
 	border-left: 70px solid transparent;
 	border-right: 70px solid transparent;
