--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
   top: 0;
   left: -35px;
   border-width: 50px 35px 0 35px;
-  border-color: transparent transparent transparent red;
+  border-color: transparent transparent transparent green;
   border-style: solid;
 }
 
